@@ -51,3 +51,22 @@ require_en_utf8_locale_()
     *) skip_ 'en_US.UTF-8 locale not found' ;;
   esac
 }
+
+# Some tests would fail without this particular locale.
+# If the locale is not available, just skip the test.
+# The exact spelling differs between operating systems
+# (ja_JP.shiftjis on Ubuntu, ja_JP.sjis on Debian, ja_JP.SJIS on Mac OS X).
+# If a sjift-jis locale is found the function sets shell variable
+# 'LOCALE_JA_SJIS' to the locale name.
+require_ja_shiftjis_locale_()
+{
+  path_prepend_ .
+  LOCALE_JA_SJIS=
+  for l in shiftjis sjis SJIS ; do
+      n=$(get-mb-cur-max ja_JP.$l) || continue
+      test 2 -eq "$n" || continue
+      LOCALE_JA_SJIS="ja_JP.$l"
+      break
+  done
+  test -z "$LOCALE_JA_SJIS" && skip_ 'ja_JP shift-jis locale not found'
+}
